--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ readme = "README.md"
   aws-cdk-lib = "^2.1.0"
   constructs = "^10.0.5"
   python = "^3.8"
+  black = "^23.11.0"
 
   [tool.poetry.dev-dependencies]
   projen = "0.77.4"
